<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_item_lessons"
        android:icon="@drawable/ic_add"
        android:title="@string/bottom_nav_item_classes" />
    <item
        android:id="@+id/menu_item_notes"
        android:icon="@drawable/ic_add"
        android:title="@string/bottom_nav_item_notes" />
    <item
        android:id="@+id/menu_item_add"
        android:icon="@drawable/ic_add"
        android:title="@string/bottom_nav_item_add" />
    <item
        android:id="@+id/menu_item_chat"
        android:icon="@drawable/ic_add"
        android:title="@string/bottom_nav_item_chat" />
    <item
        android:id="@+id/menu_item_more"
        android:icon="@drawable/ic_add"
        android:title="@string/bottom_nav_item_more" />
</menu>